# genai-summarizer

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/: bedrock_client.py  cleaner.py  info_extractor.py  main_cleaner.py  main_meeting_minutes.py  main_questions.py  main_transcription.py  questions_and_answers.py  summarizer.py  test_with_groq.ipynb  transcription_extractor.py
src/helpers/: cleaner.py  config.py
src/meeting_minutes/: meeting_minutes_sumarizer.py
src/questions/: questions_and_answers.py
src/transcription/: transcription_extractor.py
tests/integration_tests/: transcription_extractor_should.py
tests/unit_tests/: transcription_extractor_get_transcription_filename_should.py
