[tool.poetry]
name = "test-whisper"
version = "0.1.0"
description = ""
authors = ["Jorge Castro <jorge.castro@adevinta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
eyed3 = "^0.9.7"
pydub = "^0.25.1"
groq = "^0.11.0"
boto3 = "^1.35.43"
gtts = "^2.5.3"
pytubefix = "^8.1.1"
youtube-transcript-api = "^0.6.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
assertpy = "^1.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests/integration_tests",
    "tests/unit_tests",
    "tests/approval_tests"
]
pythonpath = [
    "src"
]
python_files = ["test_*.py", "*_test.py", "*_should.py", ]
python_classes = ["Test", "Acceptance", "Given"]
python_functions = ["test", "*_test", "when_*", "then_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
skip-string-normalization = true
